agrego seccion redes

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
 				<div class="caja-aq"><a href="./pages/arquigrafia.html">arquígrafia ></a></div>
 				<div class="caja-lt"><a href="./pages/lettering.html">lettering ></a></div>
 				<div class="caja-ux"><a href="./pages/uxui.html">web / ux-ui ></a></div>
+				<div class="caja-rd"><a href="./pages/redes.html">redes ></a></div>
 			</div>
 		</section>
 		<!-- División -->
