--- a/pages/redes.html
+++ b/pages/redes.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lettering</title>
+	<title>Redes</title>
 	<link rel="shortcut icon" href="../img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.9/lottie.min.js"></script>
@@ -29,16 +29,17 @@
 					<a href="../pages/arquigrafia.html" class="nav-link">arquigrafía</a>
 				</li>
 				<li>
-					<a href="#present-design" class="selected nav-link">lettering</a>
+					<a href="../pages/lettering.html" class="nav-link">lettering</a>
 				</li>
 				<li>
 					<a href="../pages/uxui.html" class="nav-link">web / ux-ui</a>
 				</li>
 				<li>
-					<a href="../pages/redes.html" class="nav-link">redes</a>
+					<a href="#present-design" class="selected nav-link">redes</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
+					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei"
+						target="_blank">currículum</a>
 				</li>
 			</ul>
 			<div class="hamburger">
@@ -54,9 +55,8 @@
 		<!-- Presentación -->
 		<section id="present-design">
 			<div class="line"></div>
-			<h1>lettering.</h1>
-			<p>El <span class="bold">lettering</span> es un término general dentro del diseño que cubre el arte de "dibujar" letras en
-				lugar de simplemente escribirlas.
+			<h1>redes.</h1>
+			<p>Diseño destinado a uso en redes sociales. Comprende desde la realización de piezas estáticas (imágenes) como de GIFS y videos (tanto ensamblaje como también pequeños detalles de motion graphics).
 			</p>
 			<a href="#gallery" class="btn-go">
 				<i class="fa-solid fa-chevron-down"></i>
@@ -65,45 +65,64 @@
 		<!-- Galería -->
 		<section id="gallery">
 			<article class="gallery-section">
-				<h3>lettering + editorial + intervención.
-					<br><br>
-					<span class="bold">// Real</span>
+				<h3>placas estáticas.
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt="Poster/afiche" loading="lazy">
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/redes/img-01.jpg"
+							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/lettering/img-02.jpg" alt="Estampilla" loading="lazy">
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/redes/img-02.jpg"
+							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/lettering/img-03.jpg" alt="Tapa de libro" loading="lazy">
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/redes/img-03.jpg"
+							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/lettering/img-04.jpg" alt="Interior de libro" loading="lazy">
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/redes/img-04.jpg"
+							alt="Formato feed" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt="Interior de libro" loading="lazy">
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/redes/img-05.jpg"
+							alt="Formato feed" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt="Interior de libro" loading="lazy">
-					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/lettering/img-07.jpg" alt="Interior de libro" loading="lazy">
-					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/lettering/img-08.jpg" alt="Interior de libro" loading="lazy">
-					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-09.jpg" alt="Interior de libro" loading="lazy">
-					</div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/lettering/img-10.jpg" alt="Tapa y contratapa de libro" loading="lazy">
-					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/lettering/img-11.jpg" alt="Poster/afiche" loading="lazy">
-					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/lettering/img-12.jpg" alt="Interveción urbana" loading="lazy">
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/redes/img-06.jpg"
+							alt="Formato feed" loading="lazy">
 					</div>
 				</div>
 			</article>
-			<div class="ficha">
-				<p><span class="bold">proyecto</span> <br> Real</p>
-				<p><span class="bold">carácter</span> <br> Académico</p>
-				<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
-				<p><span class="bold">año de realización</span> <br> 2022</p>
-				<p><span class="bold">duración aproximada</span> <br> 2 meses</p>
-				<p><span class="bold">piezas realizadas</span> <br> Afiche (A3) <br> Postales <br> (180x130 mm) <br> Maquetación de libro <br> (A5) <br> Intervención urbana</p>
-			</div>
+			<!-- División -->
+			<div class="line"></div>
+			<article class="video">
+				<h3>videos.</h3>
+				<div class="container">
+					<div class="frame1">
+						<iframe src="https://drive.google.com/file/d/1GfUuoeTrai2QoPDlpKCIwjHKDZPiIbfs/preview"
+							width="" height="" allowfullscreen></iframe>
+					</div>
+					<div class="frame2">
+						<iframe src="https://drive.google.com/file/d/1sJl4uPV6H1wn0hxRO59Xu8RNueOXj23v/preview"
+							width="640" height="360" allowfullscreen></iframe>
+					</div>
+					<div class="frame3">
+						<iframe src="https://drive.google.com/file/d/13klft-yYGhmJWT8K2dIjSXHw3liRwh5J/preview"
+							width="640" height="360" allowfullscreen></iframe>
+					</div>
+					<div class="frame4">
+						<iframe src="https://drive.google.com/file/d/1zPj5zRubnbquL3nJx693Jpw2VNFsRqwK/preview"
+							width="640" height="360" allowfullscreen></iframe>
+					</div>
+					<div class="frame5">
+						<iframe src="https://drive.google.com/file/d/1_BO0jd97rFL_-_ioUVuXNXw8yg6i_Dxh/preview"
+							width="640" height="360" allowfullscreen></iframe>
+					</div>
+					<div class="frame6">
+						<iframe src="https://drive.google.com/file/d/1nW3QxIL7_2q1ea1J0g2OtJwuY1S8MnIi/preview"
+							width="640" height="360" allowfullscreen></iframe>
+					</div>
+					<div class="frame7">
+						<iframe src="https://drive.google.com/file/d/18Uf7dKxHtubkuf9JEa5SgiDdUimgtzLK/preview"
+							width="640" height="360" allowfullscreen></iframe>
+					</div>
+				</div>
+			</article>
 		</section>
 		<!-- División -->
 		<div class="line-container">
