--- a/pages/uxui.html
+++ b/pages/uxui.html
@@ -35,6 +35,9 @@
 					<a href="#present-design" class="selected nav-link">web / ux-ui</a>
 				</li>
 				<li>
+					<a href="../pages/redes.html" class="nav-link">redes</a>
+				</li>
+				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
 				</li>
 			</ul>
