--- a/pages/redes.html
+++ b/pages/redes.html
@@ -56,7 +56,8 @@
 		<section id="present-design">
 			<div class="line"></div>
 			<h1>redes.</h1>
-			<p>Diseño destinado a uso en redes sociales. Comprende desde la realización de piezas estáticas (imágenes) como de GIFS y videos (tanto ensamblaje como también pequeños detalles de motion graphics).
+			<p>Diseño destinado a uso en redes sociales. Comprende desde la realización de piezas estáticas (imágenes)
+				como de GIFS y videos (tanto ensamblaje como también pequeños detalles de motion graphics).
 			</p>
 			<a href="#gallery" class="btn-go">
 				<i class="fa-solid fa-chevron-down"></i>
@@ -86,6 +87,15 @@
 					<div class="gallery-item" data-index="6"><img src="../img/galeria/redes/img-06.jpg"
 							alt="Formato feed" loading="lazy">
 					</div>
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/redes/img-07.jpg"
+							alt="Matchday" loading="lazy">
+					</div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/redes/img-08.jpg"
+							alt="Próximo partido" loading="lazy">
+					</div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/redes/img-09.jpg"
+							alt="Reserva" loading="lazy">
+					</div>
 				</div>
 			</article>
 			<!-- División -->
@@ -94,15 +104,16 @@
 				<h3>videos.</h3>
 				<div class="container">
 					<div class="frame1">
-						<iframe src="https://drive.google.com/file/d/1GfUuoeTrai2QoPDlpKCIwjHKDZPiIbfs/preview"
-							width="" height="" allowfullscreen></iframe>
+						<!-- 16:9 -->
+						<iframe src="https://drive.google.com/file/d/1GfUuoeTrai2QoPDlpKCIwjHKDZPiIbfs/preview" width=""
+							height="" allowfullscreen></iframe>
 					</div>
 					<div class="frame2">
 						<iframe src="https://drive.google.com/file/d/1sJl4uPV6H1wn0hxRO59Xu8RNueOXj23v/preview"
 							width="640" height="360" allowfullscreen></iframe>
 					</div>
 					<div class="frame3">
-						<iframe src="https://drive.google.com/file/d/13klft-yYGhmJWT8K2dIjSXHw3liRwh5J/preview"
+						<iframe src="https://drive.google.com/file/d/12RuDYI1TSpzVC-IKk2KRu0LV5Sbemsmu/preview"
 							width="640" height="360" allowfullscreen></iframe>
 					</div>
 					<div class="frame4">
