--- a/pages/redes.html
+++ b/pages/redes.html
@@ -96,6 +96,15 @@
 					<div class="gallery-item" data-index="9"><img src="../img/galeria/redes/img-09.jpg"
 							alt="Reserva" loading="lazy">
 					</div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/redes/img-10.jpg"
+							alt="Formato historias" loading="lazy">
+					</div>
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/redes/img-11.jpg"
+							alt="Formato historias" loading="lazy">
+					</div>
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/redes/img-12.jpg"
+							alt="Formato historias" loading="lazy">
+					</div>
 				</div>
 			</article>
 			<!-- División -->
@@ -125,7 +134,7 @@
 							width="640" height="360" allowfullscreen></iframe>
 					</div>
 					<div class="frame6">
-						<iframe src="https://drive.google.com/file/d/1nW3QxIL7_2q1ea1J0g2OtJwuY1S8MnIi/preview"
+						<iframe src="https://drive.google.com/file/d/1ArkBak-8DqCQ9pDlptMKwBPex8-KeqJ7/preview"
 							width="640" height="360" allowfullscreen></iframe>
 					</div>
 					<div class="frame7">
