--- a/index.html
+++ b/index.html
@@ -205,6 +205,16 @@
 							</p>
 						</div>
 					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">nov. 2025</div>
+						<div class="timeline-content">
+							<p>
+								Curso de <span class="bold">Excel</span> brindado por Santander Open Academy.
+							</p>
+						</div>
+					</div>
 				</div>
 			</article>
 		</section>
