--- a/pages/redes.html
+++ b/pages/redes.html
@@ -69,40 +69,40 @@
 				<h3>placas estáticas.
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/redes/img-01.jpg"
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/redes/img-01.webp"
 							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/redes/img-02.jpg"
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/redes/img-02.webp"
 							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/redes/img-03.jpg"
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/redes/img-03.webp"
 							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/redes/img-04.jpg"
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/redes/img-04.webp"
 							alt="Formato feed" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/redes/img-05.jpg"
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/redes/img-05.webp"
 							alt="Formato feed" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/redes/img-06.jpg"
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/redes/img-06.webp"
 							alt="Formato feed" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/redes/img-07.jpg"
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/redes/img-07.webp"
 							alt="Matchday" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/redes/img-08.jpg"
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/redes/img-08.webp"
 							alt="Próximo partido" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/redes/img-09.jpg"
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/redes/img-09.webp"
 							alt="Reserva" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/redes/img-10.jpg"
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/redes/img-10.webp"
 							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/redes/img-11.jpg"
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/redes/img-11.webp"
 							alt="Formato historias" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/redes/img-12.jpg"
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/redes/img-12.webp"
 							alt="Formato historias" loading="lazy">
 					</div>
 				</div>
